--- a/hosted-weather-app/web-server/templates/views/about.hbs
+++ b/hosted-weather-app/web-server/templates/views/about.hbs
@@ -12,6 +12,8 @@
     <div class="main-content">
     {{>header}}
     <img class="portrait" src= "images/BK.jpg">
+
+    <p class="about-paragraph">I am the Blamah Kotay, also known as BK. I am a software engineer apprentice on a journey to become a software engineer. I have made a weather app where you can check any location in the world and find the the current temperature! Enjoy!</p>
     </div>
 
     {{>footer}}
