--- a/hosted-weather-app/web-server/templates/views/help.hbs
+++ b/hosted-weather-app/web-server/templates/views/help.hbs
@@ -10,9 +10,14 @@
 
 <div class="main-content">
     {{>header}}
-    <p>{{helpText}}</p>
+    <p class="help">{{helpText}}</p>
+
+     <p> DO You Need Help? </p>
+   <form>
+    <input placeholder="Text-Here">
+   </form>
 </div>
-   
+  
     {{>footer}}
 </body>
 </html>
