--- a/hosted-weather-app/web-server/public/css/styles.css
+++ b/hosted-weather-app/web-server/public/css/styles.css
@@ -7,37 +7,71 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background: url(../images/weather-background.png) no-repeat center;
+  background: url(../images/darkweather-background.jpeg) no-repeat center;
   background-size: cover;
 }
 
 .main-content {
   flex-grow: 1;
+  width: 100%;
+  height: 100%;
+  /* display: flex; */
+  display: flex;
+  place-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.paragraph {
+  text-align: center;
+  font-size: 1rem;
+  white-space: nowrap;
+  margin-right: 20px;
 }
 
 footer {
   padding: 16px;
   margin-top: 16px 0;
-  color: lightcoral;
+  color: white;
   border-top: 1px solid #eeeeee;
 }
 
 header {
-  margin-top: 20px;
-  margin-bottom: 48px;
+  display: flex;
+  position: absolute;
+  top: 40px;
+  gap: 30px;
 }
 
 h1 {
-  font-size: 86px;
+  text-align: center;
   margin-top: 56px;
+  height: 1rem;
+}
+
+input {
+  padding-left: 20px;
+  flex: 1;
+  border-color: transparent;
+  display: flex;
+  z-index: 3;
+  position: relative;
+  min-height: 44px;
+  background: #fff;
+  border: 1px solid #dfe1e5;
+  outline: none;
+  box-shadow: none;
+  border-radius: 24px;
+  margin: 0 auto;
+  width: 80%;
+  margin-bottom: 20px;
 }
 
 header a {
   color: white;
-  margin: 68px;
   text-decoration: none;
   font-size: 1.5rem;
-
 }
 
 header a:hover {
@@ -46,12 +80,47 @@ header a:hover {
 }
 
 .portrait {
+  margin-bottom: 7rem;
   border-radius: 50%;
-  width: 250px;
+  width: 17.5rem;
 }
 
+.help {
+  padding: 10px;
+}
 
+textarea {
+  width: 25rem;
+  height: 8rem;
+}
 
+.paragraph {
+  margin: 3rem;
+}
+
+#message-1 {
+  font-size: 2rem;
+  color: black;
+  font-weight: 900;
+}
+
+#message-2 {
+  font-size: 2rem;
+  color: black;
+  font-weight: 900;
+}
+
+.about-paragraph {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 600;
+
+  text-align: center;
+  bottom: 100px;
+  border-radius: 12px;
+  background-color: black;
+  opacity: 0.5;
+}
 /* select {
     margin-top: 600px;
     width: 100px;
