--- a/hosted-weather-app/web-server/templates/views/index.hbs
+++ b/hosted-weather-app/web-server/templates/views/index.hbs
@@ -11,7 +11,7 @@
 
     <div class="main-content">
         {{>header}} 
-         <p>This is the site to get your weather!</p>
+         <p class="paragraph">This is the site to get your weather!</p>
 
          <form>
         <input placeholder="Enter Location">
